--- a/lesson-2-spring-mvc/pom.xml
+++ b/lesson-2-spring-mvc/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-1</artifactId>
         <groupId>com.excentro.geekbrains</groupId>
@@ -9,6 +10,7 @@
     <properties>
         <spring.version>5.2.8.RELEASE</spring.version>
     </properties>
+    <packaging>war</packaging>
 
     <artifactId>lesson-2-spring-mvc</artifactId>
     <dependencies>
@@ -30,12 +32,12 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
-            <version>3.0.10.RELEASE</version>
+            <version>3.0.11.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.18</version>
+            <version>8.0.21</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -45,7 +47,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>mvc-app</finalName>
+        <finalName>mvc</finalName>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
@@ -55,6 +57,8 @@
                     <container>
                         <containerId>tomcat9x</containerId>
                         <type>embedded</type>
+                        <log>target/log/cargo.log</log>
+                        <logLevel>debug</logLevel>
                     </container>
                 </configuration>
             </plugin>
