--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>lesson-1-network-chat</module>
         <module>lesson-2-spring-mvc</module>
+        <module>lesson-3-hibernate</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
