заставил две HttpSecurity одновременно работать

--- a/lesson-6-spring-boot/src/main/resources/application.properties
+++ b/lesson-6-spring-boot/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.fromat_sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 server.servlet.context-path=/mvc
+logging.level.org.springframework.security=DEBUG
