--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>lesson-1-network-chat</module>
         <module>lesson-2-spring-mvc</module>
         <module>lesson-3-hibernate</module>
+        <module>lesson-6-spring-boot</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
